--- a/lib/url_shortener_web/controllers/url_html/new.html.heex
+++ b/lib/url_shortener_web/controllers/url_html/new.html.heex
@@ -1,8 +1,5 @@
 <.header>
-  New Url
-  <:subtitle>Use this form to manage url records in your database.</:subtitle>
+  Shorten a long link
 </.header>
 
 <.url_form changeset={@changeset} action={~p"/urls"} />
-
-<.back navigate={~p"/urls"}>Back to urls</.back>
