--- a/lib/url_shortener_web/controllers/url_html/url_form.html.heex
+++ b/lib/url_shortener_web/controllers/url_html/url_form.html.heex
@@ -2,10 +2,8 @@
   <.error :if={@changeset.action}>
     Oops, something went wrong! Please check the errors below.
   </.error>
-  <.input field={f[:slug]} type="text" label="Slug" />
-  <.input field={f[:original_url]} type="text" label="Original url" />
-  <.input field={f[:visits]} type="number" label="Visits" />
+  <.input field={f[:original_url]} type="text" label="Paste a long URL" />
   <:actions>
-    <.button>Save Url</.button>
+    <.button>Get your link</.button>
   </:actions>
 </.simple_form>
